@@ -6,6 +6,7 @@ Version 0.5
 * 2-bit corner turners now supported: 1, 2, 3, 4, 5, 6, 7, 8, 10, 12, 14, 16 threads
 * 4-bit corner turners now supported: 1, 2, 3, 4, 5, 6, 7, 8 threads
 * 8-bit corner turners now supported: 1, 2, 3, 4, 5, 6, 7, 8, 16 threads
+* add corner turn test program: testcornerturners
 
 Version 0.4
 ~~~~~~~~~~~
